--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,25 @@ p{
     margin-bottom:40px;
     font-size:17px;
 }
-.header{
-    background-color:#fafafa;
-    border-bottom:1px #ddd solid;
+#header{
+    background-color:rgba(0,0,0,0.02);
+    border-bottom:1px rgba(0,0,0,0.2); solid;
     margin-bottom: 20px;
 }
 #trailer .modal-dialog {
     margin-top: 200px;
-    width: 640px;
-    height: 480px;
+    width: 98%;
+    margin-right: 1%;
+    margin-left: 1%;
+}
+body .modal-open{
+    background-color:rgba(0,0,0,0.75);
+}
+.modal-open{
+    background-color:rgba(0,0,0,0.75);
+}
+#trailer .modal{
+    background-color:rgba(0,0,0,0.75);
 }
 .hanging-close {
     position: absolute;
